--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,6 @@ name = "arithmetic"
 harness = false
 
 [[bench]]
-name = "hashtocurve"
-harness = false
-
-[[bench]]
 name = "plonk"
 harness = false
 
@@ -37,9 +33,13 @@ backtrace = { version = "0.3", optional = true }
 rayon = "1.5.1"
 ff = "0.11"
 group = "0.11"
-pasta_curves = "0.2.1"
 rand = "0.8"
 blake2b_simd = "0.5"
+# pairing = { path = '../pairing', package = "pairing_bn256" }
+pairing = { git = 'https://github.com/kilic/pairing', package = "pairing_bn256" }
+rand_core = { version = "0.6", default-features = false }
+subtle = "2.3"
+
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
@@ -49,6 +49,8 @@ tabbycat = { version = "0.1", features = ["attributes"], optional = true }
 criterion = "0.3"
 gumdrop = "0.8"
 proptest = "1"
+rand_xorshift = "0.3"
+
 
 [features]
 dev-graph = ["plotters", "tabbycat"]
