--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ group = "0.11"
 pasta_curves = "0.2.1"
 rand = "0.8"
 blake2b_simd = "0.5"
+sha3 = "0.9.1"
+digest = "0.9"
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
