--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.51.0
-          override: true
+          override: false
       - name: Run tests
         uses: actions-rs/cargo@v1
         with:
@@ -37,8 +36,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.51.0
-          override: true
+          override: false
       - name: Add target
         run: rustup target add ${{ matrix.target }}
       - name: cargo build
@@ -55,8 +53,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.51.0
-          override: true
+          override: false
       # Build benchmarks to prevent bitrot
       - name: Build benchmarks
         uses: actions-rs/cargo@v1
@@ -71,8 +68,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.51.0
-          override: true
+          override: false
       - name: cargo build
         uses: actions-rs/cargo@v1
         with:
@@ -118,8 +114,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.51.0
-          override: true
+          override: false
       - name: cargo fetch
         uses: actions-rs/cargo@v1
         with:
@@ -141,8 +136,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.51.0
-          override: true
+          override: false
       - run: rustup component add rustfmt
       - uses: actions-rs/cargo@v1
         with:
