--- a/.github/workflows/lints-stable.yml
+++ b/.github/workflows/lints-stable.yml
@@ -5,7 +5,7 @@ on: pull_request
 
 jobs:
   clippy:
-    name: Clippy (1.51.0)
+    name: Clippy
     timeout-minutes: 30
     runs-on: ubuntu-latest
 
@@ -13,12 +13,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.51.0
-          components: clippy
-          override: true
+          override: false
       - name: Run clippy
         uses: actions-rs/clippy-check@v1
         with:
-          name: Clippy (1.51.0)
+          name: Clippy
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features --all-targets -- -D warnings
