--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,9 @@ group = "0.11"
 rand = "0.8"
 blake2b_simd = "0.5"
 # pairing = { path = '../pairing', package = "pairing_bn256" }
-pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256", branch = "introduce-assembly-complete" }
+pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256", branch = "introduce-assembly-complete", features = ["asm"] }
 rand_core = { version = "0.6", default-features = false }
 subtle = "2.3"
-
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
@@ -51,7 +50,6 @@ criterion = "0.3"
 gumdrop = "0.8"
 proptest = "1"
 rand_xorshift = "0.3"
-
 
 [features]
 dev-graph = ["plotters", "tabbycat"]
