--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -28,10 +28,6 @@ name = "arithmetic"
 harness = false
 
 [[bench]]
-name = "hashtocurve"
-harness = false
-
-[[bench]]
 name = "plonk"
 harness = false
 
@@ -48,10 +44,13 @@ backtrace = { version = "0.3", optional = true }
 rayon = "1.5.1"
 ff = "0.12"
 group = "0.12"
-pasta_curves = "0.4"
+rand = "0.8"
 rand_core = { version = "0.6", default-features = false }
 tracing = "0.1"
 blake2b_simd = "1"
+pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
+subtle = "2.3"
+cfg-if = "0.1"
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
@@ -68,11 +67,12 @@ rand_core = { version = "0.6", default-features = false, features = ["getrandom"
 getrandom = { version = "0.2", features = ["js"] }
 
 [features]
-default = ["batch"]
+default = ["gwc"]
 dev-graph = ["plotters", "tabbycat"]
 gadget-traces = ["backtrace"]
 sanity-checks = []
-batch = ["rand_core/getrandom"]
+shplonk = []
+gwc = []
 
 [lib]
 bench = false
