--- a/.github/workflows/trigger_proverbench_dispatch.yml
+++ b/.github/workflows/trigger_proverbench_dispatch.yml
@@ -22,6 +22,6 @@ jobs:
           curl \
            -X POST \
            -H "Accept: application/vnd.github.v3+json" \
-           -u ZKEVMBOT:"${{ env.TOKEN }}" \
+           -u ZKEVMBOT:${{ env.TOKEN }} \
            https://api.github.com/repos/appliedzkp/zkevm-circuits/actions/workflows/ProverBenchFromHalo2.yml/dispatches \
            -d "{\"ref\":\"main\",\"inputs\":{\"halo2pr\":\"${{ env.PR_NUMBER }}\",\"revision\":\"${{ env.REVISION }}\",\"event-type\":\"halo2_wfdispatch\",\"ghuser\": \"${{ env.GH_USER }}\"}}"
