--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -39,6 +39,9 @@ blake2b_simd = "1"
 pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
 subtle = "2.3"
 cfg-if = "0.1"
+poseidon = { git = 'https://github.com/kilic/poseidon', branch = "padding" }
+num-bigint = { version = "0.4" }
+num-traits = "0.2"
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
