--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -43,6 +43,7 @@ cfg-if = "0.1"
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
 tabbycat = { version = "0.1", features = ["attributes"], optional = true }
+ark-std = { version = "0.3", features = ["print-trace"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # plotters depends on web-sys, which eventually depends on bumpalo 3. This dependency is
