--- a/.github/workflows/trigger_proverbench_dispatch.yml
+++ b/.github/workflows/trigger_proverbench_dispatch.yml
@@ -1,7 +1,9 @@
 name: Prover Bench on halo2 PR
 on:
-  pull_request:
-    types: [labeled ,  ready_for_review]
+  push:
+    branches:
+      - main
+
 jobs:
   Prover-benches-via-repo-dispatch-from-halo2-fork:
     if: ${{ github.event.label.name == 'benchmarks' }}
