--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -51,6 +51,7 @@ group = "0.11"
 pasta_curves = "0.3"
 rand_core = { version = "0.6", default-features = false }
 blake2b_simd = "1"
+pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
