--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -42,6 +42,7 @@ cfg-if = "0.1"
 poseidon = { git = 'https://github.com/appliedzkp/poseidon.git', branch = 'circuit' }
 num-integer = "0.1"
 num-bigint = { version = "0.4", features = ["rand"] }
+ark-std = "0.3.0"
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
@@ -65,7 +66,7 @@ rand_core = { version = "0.6", default-features = false, features = ["getrandom"
 getrandom = { version = "0.2", features = ["js"] }
 
 [features]
-default = ["gwc"]
+default = ["gwc", "ark-std/print-trace"]
 dev-graph = ["plotters", "tabbycat"]
 gadget-traces = ["backtrace"]
 sanity-checks = []
