update halo2-ecc links

--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -48,14 +48,13 @@ backtrace = { version = "0.3", optional = true }
 rayon = "1.5.1"
 ff = "0.12"
 group = "0.12"
-halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
+halo2curves = { git = 'https://github.com/scroll-tech/halo2curves/', branch = "sync-halo2-ecc-1013" }
 rand_core = { version = "0.6", default-features = false }
 tracing = "0.1"
 blake2b_simd = "1"
-# pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256", tag = "v0.1.1" }
 subtle = "2.3"
 cfg-if = "0.1"
-poseidon = { git = 'https://github.com/appliedzkp/poseidon.git' } #, branch = 'circuit' }
+poseidon = { git = 'https://github.com/scroll-tech/poseidon.git', branch = "sync-halo2-ecc-1013" } 
 num-integer = "0.1"
 num-bigint = { version = "0.4", features = ["rand"] }
 
