--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -63,7 +63,7 @@ plotters = { version = "0.3.0", optional = true }
 tabbycat = { version = "0.1", features = ["attributes"], optional = true }
 log = "0.4.17"
 
-ark_std = "0.3.0"
+ark-std = "0.3.0"
 
 [dev-dependencies]
 assert_matches = "1.5"
