--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -64,6 +64,9 @@ plotters = { version = "0.3.0", optional = true }
 tabbycat = { version = "0.1", features = ["attributes"], optional = true }
 log = "0.4.17"
 
+# timer
+ark-std = "0.3.0"
+
 [dev-dependencies]
 assert_matches = "1.5"
 criterion = "0.3"
