--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -65,7 +65,7 @@ tabbycat = { version = "0.1", features = ["attributes"], optional = true }
 log = "0.4.17"
 
 # timer
-ark-std = "0.3.0"
+ark-std = { version = "0.3.0", features = ["print-trace"] }
 
 [dev-dependencies]
 assert_matches = "1.5"
