creating pk no longer needs vk; avoid assignment twice

--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -85,6 +85,7 @@ sanity-checks = []
 batch = ["rand_core/getrandom"]
 shplonk = []
 gwc = []
+profile = ["ark-std/print-trace"]
 
 [lib]
 bench = false
