--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -48,14 +48,14 @@ backtrace = { version = "0.3", optional = true }
 rayon = "1.5.1"
 ff = "0.12"
 group = "0.12"
-halo2curves = { git = 'https://github.com/kroma-network/halo2curves.git', branch = "kroma-0.3.1-derive-serde" }
+halo2curves = { git = 'https://github.com/kroma-network/halo2curves.git', rev = "c0ac193"}
 rand_core = { version = "0.6", default-features = false }
 tracing = "0.1"
 blake2b_simd = "1"
 sha3 = "0.9.1"
 subtle = "2.3"
 cfg-if = "0.1"
-poseidon = { git = "https://github.com/kroma-network/poseidon.git", branch = "kroma-dev-0220" }
+poseidon = { git = "https://github.com/kroma-network/poseidon.git", rev = "00a2fe0" }
 num-integer = "0.1"
 num-bigint = { version = "0.4", features = ["rand"] }
 
