--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -67,12 +67,18 @@ log = "0.4.17"
 # timer
 ark-std = { version = "0.3.0" }
 
+# binding
+cxx = "1.0"
+
 [dev-dependencies]
 assert_matches = "1.5"
 criterion = "0.3"
 gumdrop = "0.8"
 proptest = "1"
 rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
+
+[build-dependencies]
+cxx-build = "1.0"
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
 getrandom = { version = "0.2", features = ["js"] }
@@ -87,6 +93,7 @@ shplonk = []
 gwc = []
 phase-check = []
 profile = ["ark-std/print-trace"]
+tachyon_msm_gpu = []
 
 [lib]
 bench = false
