--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -58,6 +58,8 @@ cfg-if = "0.1"
 poseidon = { git = "https://github.com/kroma-network/poseidon.git", rev = "00a2fe0" }
 num-integer = "0.1"
 num-bigint = { version = "0.4", features = ["rand"] }
+lazy_static = "1"
+stdint = "0.2.0"
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
@@ -67,12 +69,18 @@ log = "0.4.17"
 # timer
 ark-std = { version = "0.3.0" }
 
+# binding
+cxx = "1.0"
+
 [dev-dependencies]
 assert_matches = "1.5"
 criterion = "0.3"
 gumdrop = "0.8"
 proptest = "1"
 rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
+
+[build-dependencies]
+cxx-build = "1.0"
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
 getrandom = { version = "0.2", features = ["js"] }
@@ -87,6 +95,7 @@ shplonk = []
 gwc = []
 phase-check = []
 profile = ["ark-std/print-trace"]
+tachyon_msm_gpu = []
 
 [lib]
 bench = false
