--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -81,6 +81,7 @@ gumdrop = "0.8"
 proptest = "1"
 rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
 rand_xorshift = "0.3"
+env_logger = "0.9.0"
 
 [build-dependencies]
 cxx-build = "1.0"
